Closed Bug 495558 Opened 16 years ago Closed 16 years ago

Built firefox from hg on PPC linux to test ogg video: I hear no sound

Categories

(Core :: Audio/Video, defect)

PowerPC
Linux
defect
Not set
major

Tracking

()

RESOLVED FIXED
Tracking Status
status1.9.2 --- beta1-fixed

People

(Reporter: nsoudee, Assigned: kinetik)

References

()

Details

Attachments

(1 file, 1 obsolete file)

User-Agent: Mozilla/5.0 (X11; U; Linux ppc; en-US; rv:1.9.1pre) Gecko/20090529 Iceweasel/3.0.7, Ant.com Toolbar 1.3 Build Identifier: Mozilla/5.0 (X11; U; Linux ppc; en-US; rv:1.9.1pre) Gecko/20090529 Iceweasel/3.0.7, Ant.com Toolbar 1.3 Since I was unable to find a pre-built package of Firefox 3.5 beta 4 for powerpc linux, I decided to build it on my own, to see if the new theora stuff works. The video is working gloriously, but there is no audio! I cannot say whether this is just me not knowing how to build firefox correctly, or if this is a legitimate bug, but I figured I'd toss it in here... How many people have built the dev. firefox on powerpc linux ?... If there is anything I can do to be more informative (logs, etc) I'll be happy to supply them to help solve this issue! Reproducible: Always Steps to Reproduce: 1. Fire up firefox 2. visit a page that has some <video> going on 3. no discernable sound waves reach the ears.
Component: General → Video/Audio
Product: Firefox → Core
QA Contact: general → video.audio
What Linux distribution are you using? Is it using Alsa for the sound system?
(In reply to comment #1) > What Linux distribution are you using? Is it using Alsa for the sound system? Debian (testing), it's using ALSA, and at first there was a pulseaudio on top of that, but I tried with and without it, with no other applications running. Audacious, set to use ALSA, works OK, so I know that ALSA sound works fine in general. If it's any help, I think mozilla uses libasound, here's the version information as reported by apt-cache: Package: libasound2-dev Versions: 1.0.19-1 (/var/lib/apt/lists/http.us.debian.org_debian_dists_testing_main_binary-powerpc_Packages)
Hello again, I got sound to work by ditching the ALSA code (I just made the Makefiles for libsydney point to the oss C file instead of the ALSA C file). Everything works great now... I kind of question the usefulness of the ALSA stuff to begin with. Users who use OSS4 (there are a few) would have some problems getting sound to work.
> I kind of question the usefulness of the ALSA stuff to begin with. Users who use OSS4 (there are a few) would have some problems getting sound to work. The userspace API for ALSA supports pluggable backends, and I believe support for an OSS backend already exists, so OSSv4 users should be able to configure working sound. The advantage of using only ALSA and allowing different backends to be supported by ALSA plugins means that we can program to a single API and have working sound everywhere. Unfortunately I don't have access to a PowerPC machine running Linux, so it's not possible to debug your problem locally. If you can assist with debugging this problem in the ALSA code, it would be greatly appreciated.
OK, I looked at it a little bit and got it working. I did a search/replace on the file media/libsydneyaudio/src/sydney_audio_alsa.c, replacing all "_LE" into "_BE", hoping that the issue is just the classic endianness issue most PPC ports suffer, and lo and behold, audio works great! I can leave it to you guys to patch this in a cleaner way...
Attached patch patch v0 (obsolete) — Splinter Review
Thanks! That turned out to be pretty simple. I think this simple patch (untested) should be all that's required.
Assignee: nobody → kinetik
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
I've tested your patch with success! Thanks for looking into it so promptly. The ten people still using PowerPCs will be happy :-)
Attached patch patch v1Splinter Review
Include patch file and updates to update.sh and README_MOZILLA. Also submitted upstream: https://trac.annodex.net/ticket/490
Attachment #385037 - Attachment is obsolete: true
Attachment #386160 - Flags: review?(chris.double)
Attachment #386160 - Flags: review?(chris.double) → review+
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: