Bug 495558 - Initialize sydneyaudio/ALSA with host endian format (fixes sound on big endian machines).  r=chris.double